Grammar/src/main/java/org/endeavourhealth/informationmanager/parser/MOWLParser.java
// Generated from C:/Users/david/CloudStation/EhealthTrust/Discovery Data Service/InformationManager/Grammar/src/main/resources\MOWL.g4 by ANTLR 4.9
package org.endeavourhealth.informationmanager.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MOWLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMMA=1, O_LABEL=2, RANGE_LABEL=3, DOMAIN_LABEL=4, SUB_PROPERTY_OF_LABEL=5, 
		SUB_PROPERTY_CHAIN_LABEL=6, REFERENCE=7, INTEGER_LABEL=8, DECIMAL_LABEL=9, 
		FLOAT_LABEL=10, STRING_LABEL=11, LENGTH_LABEL=12, MIN_LENGTH_LABEL=13, 
		MAX_LENGTH_LABEL=14, PATTERN_LABEL=15, LANG_PATTERN_LABEL=16, THAT_LABEL=17, 
		ANNOTATIONS_LABEL=18, INVERSE_LABEL=19, MINUS=20, DOT=21, PLUS=22, OPEN_SQUARE_BRACE=23, 
		CLOSE_SQUARE_BRACE=24, NODE_ID=25, NOT_LABEL=26, LESS_EQUAL=27, GREATER_EQUAL=28, 
		LESS=29, GREATER=30, OPEN_CURLY_BRACE=31, CLOSE_CURLY_BRACE=32, CLASS_LABEL=33, 
		SUBCLASS_LABEL=34, EQUIVALENT_LABEL=35, DISJOINT_LABEL=36, NAME_LABEL=37, 
		DESC_LABEL=38, CODE_LABEL=39, SCHEME_LABEL=40, OR_LABEL=41, AND_LABEL=42, 
		SOME_LABEL=43, ONLY_LABEL=44, VALUE_LABEL=45, SELF_LABEL=46, MIN_LABEL=47, 
		MAX_LABEL=48, EXACTLY_LABEL=49, OBJECT_PROPERTY_LABEL=50, DATA_PROPERTY_LABEL=51, 
		ANNOTATION_PROPERTY_LABEL=52, NAMED_INDIVIDUAL_LABEL=53, LEFT_PAREN=54, 
		RIGHT_PAREN=55, IRI_REF=56, PNAME_NS=57, PNAME_LN=58, BLANK_NODE_LABEL=59, 
		VAR1=60, VAR2=61, LANGTAG=62, INTEGER=63, DECIMAL=64, DOUBLE=65, INTEGER_POSITIVE=66, 
		DECIMAL_POSITIVE=67, DOUBLE_POSITIVE=68, INTEGER_NEGATIVE=69, DECIMAL_NEGATIVE=70, 
		DOUBLE_NEGATIVE=71, EXPONENT=72, STRING_LITERAL1=73, STRING_LITERAL2=74, 
		STRING_LITERAL_LONG1=75, STRING_LITERAL_LONG2=76, ECHAR=77, NIL=78, ANON=79, 
		PN_CHARS_U=80, VARNAME=81, PN_PREFIX=82, PN_LOCAL=83, WS=84, LANGUAGE_TAG=85;
	public static final int
		RULE_iriRef = 0, RULE_prefixedName = 1, RULE_entity = 2, RULE_classentity = 3, 
		RULE_objectPropertyEntity = 4, RULE_coreProperties = 5, RULE_string = 6, 
		RULE_classAxiom = 7, RULE_subClass = 8, RULE_equivalent = 9, RULE_disjoint = 10, 
		RULE_objectPropertyAxiom = 11, RULE_objectPropertyExpressionAnnotatedList = 12, 
		RULE_classExpression = 13, RULE_intersection = 14, RULE_classRole = 15, 
		RULE_atomic = 16, RULE_individual = 17, RULE_restriction = 18, RULE_nonNegativeInteger = 19, 
		RULE_dataclassRole = 20, RULE_objectPropertyList = 21, RULE_objectProperty = 22, 
		RULE_dataProperty = 23, RULE_dataPropertyIRI = 24, RULE_dataAtomic = 25, 
		RULE_dataType = 26, RULE_literal = 27, RULE_typedLiteral = 28, RULE_stringLiteralNoLanguage = 29, 
		RULE_stringLiteralWithLanguage = 30, RULE_lexicalValue = 31, RULE_dataPropertyExpression = 32, 
		RULE_dataTypeRestriction = 33, RULE_facet = 34, RULE_restrictionValue = 35, 
		RULE_inverseObjectProperty = 36, RULE_decimalLiteral = 37, RULE_integerLiteral = 38, 
		RULE_floatingPointLiteral = 39, RULE_dataRange = 40, RULE_dataConjunction = 41, 
		RULE_annotationAnnotatedList = 42, RULE_annotation = 43, RULE_annotationPropertyIRI = 44, 
		RULE_annotationTarget = 45, RULE_annotations = 46, RULE_literalList = 47, 
		RULE_objectPropertyExpression = 48, RULE_ataPropertyIRI = 49, RULE_datatypeIRI = 50, 
		RULE_objectPropertyIRI = 51, RULE_individualIRI = 52, RULE_datatypePropertyIRI = 53, 
		RULE_classIRI = 54, RULE_and = 55;
	private static String[] makeRuleNames() {
		return new String[] {
			"iriRef", "prefixedName", "entity", "classentity", "objectPropertyEntity", 
			"coreProperties", "string", "classAxiom", "subClass", "equivalent", "disjoint", 
			"objectPropertyAxiom", "objectPropertyExpressionAnnotatedList", "classExpression", 
			"intersection", "classRole", "atomic", "individual", "restriction", "nonNegativeInteger", 
			"dataclassRole", "objectPropertyList", "objectProperty", "dataProperty", 
			"dataPropertyIRI", "dataAtomic", "dataType", "literal", "typedLiteral", 
			"stringLiteralNoLanguage", "stringLiteralWithLanguage", "lexicalValue", 
			"dataPropertyExpression", "dataTypeRestriction", "facet", "restrictionValue", 
			"inverseObjectProperty", "decimalLiteral", "integerLiteral", "floatingPointLiteral", 
			"dataRange", "dataConjunction", "annotationAnnotatedList", "annotation", 
			"annotationPropertyIRI", "annotationTarget", "annotations", "literalList", 
			"objectPropertyExpression", "ataPropertyIRI", "datatypeIRI", "objectPropertyIRI", 
			"individualIRI", "datatypePropertyIRI", "classIRI", "and"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", "'o'", null, null, null, null, "'^^'", "'integer'", "'decimal'", 
			"'float'", "'string'", "'length'", "'minLength'", "'maxLength'", "'pattern'", 
			"'langPattern'", "'that'", null, "'inverse'", "'-'", "'.'", "'+'", "'['", 
			"']'", "'_:'", "'not'", "'<='", "'>='", "'<'", "'>'", "'{'", "'}'", null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"'Self '", null, null, null, "'ObjectProperty:'", "'DataProperty:'", 
			"'AnnotaionProperty:'", "'NamedIndividual'", "'('", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COMMA", "O_LABEL", "RANGE_LABEL", "DOMAIN_LABEL", "SUB_PROPERTY_OF_LABEL", 
			"SUB_PROPERTY_CHAIN_LABEL", "REFERENCE", "INTEGER_LABEL", "DECIMAL_LABEL", 
			"FLOAT_LABEL", "STRING_LABEL", "LENGTH_LABEL", "MIN_LENGTH_LABEL", "MAX_LENGTH_LABEL", 
			"PATTERN_LABEL", "LANG_PATTERN_LABEL", "THAT_LABEL", "ANNOTATIONS_LABEL", 
			"INVERSE_LABEL", "MINUS", "DOT", "PLUS", "OPEN_SQUARE_BRACE", "CLOSE_SQUARE_BRACE", 
			"NODE_ID", "NOT_LABEL", "LESS_EQUAL", "GREATER_EQUAL", "LESS", "GREATER", 
			"OPEN_CURLY_BRACE", "CLOSE_CURLY_BRACE", "CLASS_LABEL", "SUBCLASS_LABEL", 
			"EQUIVALENT_LABEL", "DISJOINT_LABEL", "NAME_LABEL", "DESC_LABEL", "CODE_LABEL", 
			"SCHEME_LABEL", "OR_LABEL", "AND_LABEL", "SOME_LABEL", "ONLY_LABEL", 
			"VALUE_LABEL", "SELF_LABEL", "MIN_LABEL", "MAX_LABEL", "EXACTLY_LABEL", 
			"OBJECT_PROPERTY_LABEL", "DATA_PROPERTY_LABEL", "ANNOTATION_PROPERTY_LABEL", 
			"NAMED_INDIVIDUAL_LABEL", "LEFT_PAREN", "RIGHT_PAREN", "IRI_REF", "PNAME_NS", 
			"PNAME_LN", "BLANK_NODE_LABEL", "VAR1", "VAR2", "LANGTAG", "INTEGER", 
			"DECIMAL", "DOUBLE", "INTEGER_POSITIVE", "DECIMAL_POSITIVE", "DOUBLE_POSITIVE", 
			"INTEGER_NEGATIVE", "DECIMAL_NEGATIVE", "DOUBLE_NEGATIVE", "EXPONENT", 
			"STRING_LITERAL1", "STRING_LITERAL2", "STRING_LITERAL_LONG1", "STRING_LITERAL_LONG2", 
			"ECHAR", "NIL", "ANON", "PN_CHARS_U", "VARNAME", "PN_PREFIX", "PN_LOCAL", 
			"WS", "LANGUAGE_TAG"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MOWL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MOWLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class IriRefContext extends ParserRuleContext {
		public TerminalNode IRI_REF() { return getToken(MOWLParser.IRI_REF, 0); }
		public TerminalNode VARNAME() { return getToken(MOWLParser.VARNAME, 0); }
		public PrefixedNameContext prefixedName() {
			return getRuleContext(PrefixedNameContext.class,0);
		}
		public TerminalNode STRING_LITERAL1() { return getToken(MOWLParser.STRING_LITERAL1, 0); }
		public IriRefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_iriRef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MOWLListener ) ((MOWLListener)listener).enterIriRef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MOWLListener ) ((MOWLListener)listener).exitIriRef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MOWLVisitor ) return ((MOWLVisitor<? extends T>)visitor).visitIriRef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IriRefContext iriRef() throws RecognitionException {
		IriRefContext _localctx = new IriRefContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_iriRef);
		try {
			setState(116);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IRI_REF:
				enterOuterAlt(_localctx, 1);
				{
				setState(112);
				match(IRI_REF);
				}
				break;
			case VARNAME:
				enterOuterAlt(_localctx, 2);
				{
				setState(113);
				match(VARNAME);
				}
				break;
			case PNAME_NS:
			case PNAME_LN:
				enterOuterAlt(_localctx, 3);
				{
				setState(114);
				prefixedName();
				}
				break;
			case STRING_LITERAL1:
				enterOuterAlt(_localctx, 4);
				{
				setState(115);
				match(STRING_LITERAL1);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrefixedNameContext extends ParserRuleContext {
		public TerminalNode PNAME_LN() { return getToken(MOWLParser.PNAME_LN, 0); }
		public TerminalNode PNAME_NS() { return getToken(MOWLParser.PNAME_NS, 0); }
		public PrefixedNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prefixedName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MOWLListener ) ((MOWLListener)listener).enterPrefixedName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MOWLListener ) ((MOWLListener)listener).exitPrefixedName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MOWLVisitor ) return ((MOWLVisitor<? extends T>)visitor).visitPrefixedName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrefixedNameContext prefixedName() throws RecognitionException {
		PrefixedNameContext _localctx = new PrefixedNameContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_prefixedName);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			_la = _input.LA(1);
			if ( !(_la==PNAME_NS || _la==PNAME_LN) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EntityContext extends ParserRuleContext {
		public ClassentityContext classentity() {
			return getRuleContext(ClassentityContext.class,0);
		}
		public ObjectPropertyEntityContext objectPropertyEntity() {
			return getRuleContext(ObjectPropertyEntityContext.class,0);
		}
		public EntityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entity; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MOWLListener ) ((MOWLListener)listener).enterEntity(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MOWLListener ) ((MOWLListener)listener).exitEntity(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MOWLVisitor ) return ((MOWLVisitor<? extends T>)visitor).visitEntity(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EntityContext entity() throws RecognitionException {
		EntityContext _localctx = new EntityContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_entity);
		try {
			setState(122);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CLASS_LABEL:
				enterOuterAlt(_localctx, 1);
				{
				setState(120);
				classentity();
				}
				break;
			case OBJECT_PROPERTY_LABEL:
				enterOuterAlt(_localctx, 2);
				{
				setState(121);
				objectPropertyEntity();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassentityContext extends ParserRuleContext {
		public TerminalNode CLASS_LABEL() { return getToken(MOWLParser.CLASS_LABEL, 0); }
		public ClassIRIContext classIRI() {
			return getRuleContext(ClassIRIContext.class,0);
		}
		public CorePropertiesContext coreProperties() {
			return getRuleContext(CorePropertiesContext.class,0);
		}
		public TerminalNode EOF() { return getToken(MOWLParser.EOF, 0); }
		public List<ClassExpressionContext> classExpression() {
			return getRuleContexts(ClassExpressionContext.class);
		}
		public ClassExpressionContext classExpression(int i) {
			return getRuleContext(ClassExpressionContext.class,i);
		}
		public ClassentityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classentity; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MOWLListener ) ((MOWLListener)listener).enterClassentity(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MOWLListener ) ((MOWLListener)listener).exitClassentity(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MOWLVisitor ) return ((MOWLVisitor<? extends T>)visitor).visitClassentity(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassentityContext classentity() throws RecognitionException {
		ClassentityContext _localctx = new ClassentityContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_classentity);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(CLASS_LABEL);
			setState(125);
			classIRI();
			setState(126);
			coreProperties();
			setState(128); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(127);
				classExpression();
				}
				}
				setState(130); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( ((((_la - 19)) & ~0x3f) == 0 && ((1L << (_la - 19)) & ((1L << (INVERSE_LABEL - 19)) | (1L << (NOT_LABEL - 19)) | (1L << (LEFT_PAREN - 19)) | (1L << (IRI_REF - 19)) | (1L << (PNAME_NS - 19)) | (1L << (PNAME_LN - 19)) | (1L << (STRING_LITERAL1 - 19)) | (1L << (VARNAME - 19)))) != 0) );
			setState(132);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
